--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -11,7 +11,7 @@
 
 @layer utilities {
   .website-logo {
-    @apply relative w-5 h-5 lg:w-8 lg:h-8;
+    @apply relative w-5 h-5 lg:w-8 lg:h-8 hover:cursor-pointer;
   }
 
   .button-gradient {
@@ -19,6 +19,6 @@
   }
 
   .nav-list {
-    @apply w-full absolute sm:static flex sm:flex-row flex-col sm:gap-0 gap-3 sm:py-0 py-4 justify-between items-center sm:bg-transparent bg-neutral rounded-b-3xl
+    @apply w-full text-sm absolute sm:static flex sm:flex-row flex-col sm:gap-0 gap-3 sm:py-0 py-4 justify-between items-center sm:bg-transparent bg-neutral rounded-b-3xl
   }
 }
